# pipectl

./: .gitignore  CMakeLists.txt  README.md
man/: CMakeLists.txt  pipectl.1.scd
scripts/: release.sh
src/: main.c
